--- a/templates/base.html
+++ b/templates/base.html
@@ -103,6 +103,7 @@
           </a>
           <div class="dropdown-menu" aria-labelledby="pagesDropdown">
               <a class="dropdown-item" href="{% url 'vista_reporte'%}">Reporte de Prestamos</a>
+              <a class="dropdown-item" href="{% url 'vista_materiales_disponibles'%}">Reporte de Materiales</a>
           </div>
         </li>
 
