--- a/templates/agregar_aprendiz.html
+++ b/templates/agregar_aprendiz.html
@@ -68,7 +68,7 @@ Agregar Aprendiz
                 </div>
               </div>
            </div>
-        <button class="btn btn-success">Registrar Aprendiz</button>
+        <button class="btn btn-guardar">Registrar Aprendiz</button>
 	</form>		
 		</div>
   </div>
