--- a/templates/ingresar_cuentadante.html
+++ b/templates/ingresar_cuentadante.html
@@ -33,7 +33,7 @@ Agregar Cuentadante
                 </div>
               </div>
            </div>
-          <button type="submit" class="btn btn-success">Registrar Cuentadante</button>
+          <button type="submit" class="btn btn-guardar">Registrar Cuentadante</button>
 	</form>
 </div>
 </div>
