--- a/templates/ver_ficha.html
+++ b/templates/ver_ficha.html
@@ -12,7 +12,7 @@ Lista de Fichas
             </div>
             <div class="card-body">
               <div class="btn_agregar">
-                <a href="{% url 'agr_ficha'%}" class="btn btn-secondary" id="agregar">Agregar Ficha</a>
+                <a href="{% url 'agr_ficha'%}" class="btn btn-agregar" >Agregar Ficha</a>
               </div>
               <div class="table-responsive">
                 <table class="table table-bordered table-hover" id="dataTable" width="100%" cellspacing="0">
