--- a/templates/vista_agregar_bodega.html
+++ b/templates/vista_agregar_bodega.html
@@ -32,7 +32,7 @@ Agregar Bodega
                 </div>
               </div>
          </div>
-		<button class="btn btn-success">Registrar</button>
+		<button class="btn btn-guardar">Registrar</button>
 	</form>
 </div>
 </div>
