--- a/templates/vista_agregar_marca.html
+++ b/templates/vista_agregar_marca.html
@@ -20,7 +20,7 @@
                 </div>
               </div>
           </div>
-         <button type="submit" class="btn btn-success">Registrar</button>
+         <button type="submit" class="btn btn-guardar">Registrar</button>
 	</form>
 </div>
 </div>
