--- a/templates/vista_agregar_material.html
+++ b/templates/vista_agregar_material.html
@@ -25,7 +25,7 @@
               </div>
           </div>
           {% endfor %}
-          <button class="btn btn-success" type="submit">Guardar nuevo material</button>
+          <button class="btn btn-guardar" type="submit">Guardar nuevo material</button>
       </div>
   </form>  <br>
   <a class="btn btn-secondary btn-sm" href="{% url 'vista_lista_material' %}">Regresar a la lista</a>
