--- a/templates/agregar_categoria.html
+++ b/templates/agregar_categoria.html
@@ -22,7 +22,7 @@ Agregar Categoria
               </div>
            </div>
            <br>
-          <button type="submit" class="btn btn-success">Registrar</button>
+          <button type="submit" class="btn btn-guardar">Registrar</button>
 	</form>
 </div>
 </div>
