--- a/templates/agregar_prestamo.html
+++ b/templates/agregar_prestamo.html
@@ -36,8 +36,7 @@
             </div>
                     
         <br>
-        <input type="submit" value="AGREGAR PRESTAMO">
-       
+       <button class="btn btn-guardar" type="submit">AGREGAR PRESTAMO</button>
 
   </form>
 
