--- a/templates/categoria.html
+++ b/templates/categoria.html
@@ -13,7 +13,7 @@ Lista de Categorias
             </div>
             <div class="card-body">
               <div class="btn_agregar">
-                <a href="{% url 'agr_categoria'%}" class="btn btn-secondary" id="agregar">Agregar Categoria</a>  
+                <a href="{% url 'agr_categoria'%}" class="btn btn-agregar" >Agregar Categoria</a>  
               </div>
               <div class="table-responsive">
                 <table class="table table-bordered table-hover" id="dataTable" width="100%" cellspacing="0">
