--- a/templates/lista_bodega.html
+++ b/templates/lista_bodega.html
@@ -14,7 +14,7 @@
             </div>
             <div class="card-body">
               <div class="btn_agregar">
-                <a href="{%url 'vista_agregar_bodega'%}" class="btn btn-secondary" id="agregar">Agregar Bodega</a>
+                <a href="{%url 'vista_agregar_bodega'%}" class="btn btn-agregar" >Agregar Bodega</a>
               </div>
               <div class="table-responsive">
                 <table class="table table-bordered table-hover" id="dataTable" width="100%" cellspacing="0">
