--- a/templates/lista_cuentadante.html
+++ b/templates/lista_cuentadante.html
@@ -13,7 +13,7 @@ Lista de Cuentadantes
             </div>
             <div class="card-body">
               <div class="btn_agregar">
-                <a href="{% url 'agregar_cuentadante'%}" class="btn btn-secondary" id="agregar">Agregar Cuentadante</a>
+                <a href="{% url 'agregar_cuentadante'%}" class="btn btn-agregar" >Agregar Cuentadante</a>
               </div>
               <div class="table-responsive">
                 <table class="table table-bordered table-hover" id="dataTable" width="100%" cellspacing="0">
