--- a/templates/lista_programas.html
+++ b/templates/lista_programas.html
@@ -12,7 +12,7 @@
             </div>
             <div class="card-body">
               <div class="btn_agregar">
-                <a href="{% url 'vista_agregar_programas' %}" class="btn btn-secondary" id="agregar">Agregar Programa</a>
+                <a href="{% url 'vista_agregar_programas' %}" class="btn btn-agregar" >Agregar Programa</a>
               </div>
               <div class="table-responsive">
                 <table class="table table-bordered table-hover" id="dataTable" width="100%" cellspacing="0">
