--- a/templates/vista_lista_marca.html
+++ b/templates/vista_lista_marca.html
@@ -11,7 +11,7 @@
             </div>
             <div class="card-body">
               <div class="btn_agregar">
-	               <a href="{% url 'vista_agregar_marca' %}" class="btn btn-secondary" id="agregar">Agregar Marca</a>
+	               <a href="{% url 'vista_agregar_marca' %}" class="btn btn-agregar" >Agregar Marca</a>
               </div>
               <div class="table-responsive">
                 <table class="table table-bordered table-hover" id="dataTable" width="100%" cellspacing="0">
