--- a/templates/vista_lista_material.html
+++ b/templates/vista_lista_material.html
@@ -11,7 +11,7 @@
             </div>
             <div class="card-body">
               <div class="btn_agregar">
-                  <a class="btn btn-secondary" href="{% url 'vista_agregar_material' %}" id="agregar">Agregar Material</a>       
+                  <a class="btn btn-agregar" href="{% url 'vista_agregar_material' %}" >Agregar Material</a>       
               </div>
               <div class="table-responsive">
                 <table class="table table-bordered table-hover" id="dataTable" width="100%" cellspacing="0">
