--- a/templates/agregar_ficha.html
+++ b/templates/agregar_ficha.html
@@ -69,7 +69,7 @@ Agregar Ficha
                 </div>
               </div>
            </div>
-           <button type="submit" class="btn btn-guardar">Registrar Ficha</button>
+           <button type="submit" class="btn btn-success">Registrar Ficha</button>
 	</form>
 </div>
 </div>
