--- a/templates/agregar_prestamo.html
+++ b/templates/agregar_prestamo.html
@@ -36,7 +36,8 @@
             </div>
                     
         <br>
-       <button class="btn btn-guardar" type="submit">AGREGAR PRESTAMO</button>
+        <input type="submit" value="AGREGAR PRESTAMO">
+       
 
   </form>
 
