--- a/templates/lista_aprendiz.html
+++ b/templates/lista_aprendiz.html
@@ -11,7 +11,7 @@ Lista de Aprendices
             </div>
             <div class="card-body">
               <div class="btn_agregar">
-                <a href="{% url 'vista_agregar_aprendiz' %}" class="btn btn-agregar" >Agregar Aprendiz</a>
+                <a href="{% url 'vista_agregar_aprendiz' %}" class="btn btn-secondary" id="agregar">Agregar Aprendiz</a>
               </div>
               <div class="table-responsive">
                 <table class="table table-bordered table-hover" id="dataTable" width="100%" cellspacing="0">
