--- a/templates/vista_agregar_nombre_material.html
+++ b/templates/vista_agregar_nombre_material.html
@@ -3,25 +3,19 @@
 	Agregar nombre material
 {% endblock titulo %}
 {% block contenido %}
-<div id="cajota">
-  <div id="centrar">
-    <h3>Agregar nombre del material</h3>
-    <br>
-  	<form action="" method="POST">
-  		{% csrf_token %}
-  			<div class="form-group">
-                <div class="form-row">
-                  <div class="col-md-12">
-                  	{{formulario.nombre.errors}}
-                    <div class="form-label-group">
-                      {{formulario.nombre}}
-                      <label for="nombre">nombre</label>
-                    </div>
+	<form action="" method="POST">
+		{% csrf_token %}
+			<div class="form-group">
+              <div class="form-row">
+                <div class="col-md-6">
+                	{{formulario.nombre.errors}}
+                  <div class="form-label-group">
+                    {{formulario.nombre}}
+                    <label for="nombre">nombre</label>
                   </div>
                 </div>
-             </div>
-            <button type="submit" class="btn btn-guardar">Registrar</button>
-  	</form>
-  </div>
-</div>
+              </div>
+           </div>
+          <button type="submit" class="btn btn-success">Registrar</button>
+	</form>
 {% endblock contenido %}
