--- a/templates/agregar_programa.html
+++ b/templates/agregar_programa.html
@@ -23,7 +23,7 @@
               </div>
            </div>
            <br>
-        <button class="btn btn-guardar">Registrar Programa</button>
+        <button class="btn btn-success">Registrar Programa</button>
         
 	</form>
   <br>
