--- a/templates/lista_nombre_material.html
+++ b/templates/lista_nombre_material.html
@@ -10,7 +10,7 @@
             </div>
             <div class="card-body">
               <div class="btn_agregar">
-                <a href="{% url 'vista_agregar_nombre_material' %}" class="btn btn-agregar" >Agregar Nombre de material</a>
+                <a href="{% url 'vista_agregar_nombre_material' %}" class="btn btn-secondary" id="agregar">Agregar Nombre de material</a>
               </div>
               <div class="table-responsive">
                 <table class="table table-bordered table-hover" id="dataTable" width="100%" cellspacing="0">
