--- a/templates/lista_prestamo.html
+++ b/templates/lista_prestamo.html
@@ -10,7 +10,7 @@
               Lista de Prestamos</div>
             <div class="card-body">
               <div class="btn_agregar">
-                <a href="{% url 'agregar_prestamo' %}" class="btn btn-agregar" >Agregar Prestamo</a>
+                <a href="{% url 'agregar_prestamo' %}" class="btn btn-secondary" id="agregar">Agregar Prestamo</a>
               </div>
               <div class="table-responsive">
                 <table class="table table-bordered table-hover" id="dataTable" width="100%" cellspacing="0">
