--- a/templates/lista_aprendiz.html
+++ b/templates/lista_aprendiz.html
@@ -10,9 +10,11 @@ Lista de Aprendices
               Lista de Aprendiz
             </div>
             <div class="card-body">
-              <div class="btn_agregar">
-                <a href="{% url 'vista_agregar_aprendiz' %}" class="btn btn-secondary" id="agregar">Agregar Aprendiz</a>
-              </div>
+              {% if user.is_staff %}
+                <div class="btn_agregar">
+                  <a href="{% url 'vista_agregar_aprendiz' %}" class="btn btn-secondary" id="agregar">Agregar Aprendiz</a>
+                </div>
+              {% endif %}
               <div class="table-responsive">
                 <table class="table table-bordered table-hover" id="dataTable" width="100%" cellspacing="0">
                   <thead>
@@ -22,7 +24,9 @@ Lista de Aprendices
                       <th>Tipo documento</th>
                       <th>Estado</th>
                       <th>Ficha</th>
-                      <th></th>
+                      {% if user.is_staff %}
+                        <th>Funciones</th>
+                      {% endif %}
                     </tr>
                   </thead>
                   <tfoot>
@@ -32,7 +36,9 @@ Lista de Aprendices
                       <th>Tipo documento</th>
                       <th>Estado</th>
                       <th>Ficha</th>
-                      <th></th>
+                      {% if user.is_staff %}
+                        <th>Funciones</th>
+                      {% endif %}
                     </tr>
                   </tfoot>
                   <tbody>
@@ -51,15 +57,17 @@ Lista de Aprendices
         									{% endfor %}
         									{% endif %}
         							</td>
-                      <td>
-                        <a href="{% url 'vista_editar_aprendiz' id_apr=p.id %}" class="btn btn-sm">
-                          <img src="{% static "imagenes/iconos/pencil-2x.png" %}">
-                        </a>
+                      {% if user.is_staff %}
+                        <td>
+                          <a href="{% url 'vista_editar_aprendiz' id_apr=p.id %}" class="btn btn-sm">
+                            <img src="{% static "imagenes/iconos/pencil-2x.png" %}">
+                          </a>
 
-                        <a href="{% url 'vista_eliminar_aprendiz' id_apr=p.id %}" class="btn btn-sm">
-                          <img src="{% static "imagenes/iconos/trash-2x.png" %}">
-                        </a>
-                      </td>
+                          <a href="{% url 'vista_eliminar_aprendiz' id_apr=p.id %}" class="btn btn-sm">
+                            <img src="{% static "imagenes/iconos/trash-2x.png" %}">
+                          </a>
+                        </td>
+                      {% endif %}
                  		</tr>
                  		{% empty %}
           						<tr>
