--- a/templates/lista_cuentadante.html
+++ b/templates/lista_cuentadante.html
@@ -12,23 +12,29 @@ Lista de Cuentadantes
               Lista de Cuentadantes
             </div>
             <div class="card-body">
-              <div class="btn_agregar">
-                <a href="{% url 'agregar_cuentadante'%}" class="btn btn-secondary" id="agregar">Agregar Cuentadante</a>
-              </div>
+              {% if user.is_staff %}
+                <div class="btn_agregar">
+                  <a href="{% url 'agregar_cuentadante'%}" class="btn btn-secondary" id="agregar">Agregar Cuentadante</a>
+                </div>
+              {% endif %}
               <div class="table-responsive">
                 <table class="table table-bordered table-hover" id="dataTable" width="100%" cellspacing="0">
                   <thead>
                     <tr>
                       <th>nombre</th>
                       <th>identificacion </th>
-                      <th></th>
+                      {% if user.is_staff %}
+                        <th>Funciones</th>
+                      {% endif %}
                     </tr>
                   </thead>
                   <tfoot>
                     <tr>
                       <th>nombre</th>
                       <th>identificacion </th>
-                      <th></th>
+                      {% if user.is_staff %}
+                        <th>Funciones</th>
+                      {% endif %}
                     </tr>
                   </tfoot>
                   <tbody>
@@ -36,15 +42,17 @@ Lista de Cuentadantes
                  		<tr>
                  			<td>{{p.nombre}}</td>
                  			<td>{{p.identificacion}}</td>
-                 			<td>
-                        <a href="{% url 'editarr_cuentadante' id_cue=p.id %}" class="btn btn-sm">
-                          <img src="{% static "imagenes/iconos/pencil-2x.png" %}">
-                        </a>
+                      {% if user.is_staff %}
+                   			<td>
+                          <a href="{% url 'editarr_cuentadante' id_cue=p.id %}" class="btn btn-sm">
+                            <img src="{% static "imagenes/iconos/pencil-2x.png" %}">
+                          </a>
 
-                        <a href="{% url 'eliminarr_cuentadante' id_cue=p.id %}" class="btn btn-sm">
-                           <img src="{% static "imagenes/iconos/trash-2x.png" %}">
-                        </a>
-                      </td>
+                          <a href="{% url 'eliminarr_cuentadante' id_cue=p.id %}" class="btn btn-sm">
+                             <img src="{% static "imagenes/iconos/trash-2x.png" %}">
+                          </a>
+                        </td>
+                      {% endif %}
                  		</tr>
                  		{% empty %}
           						<tr>
