--- a/templates/lista_nombre_material.html
+++ b/templates/lista_nombre_material.html
@@ -9,36 +9,44 @@
               <i class="fas fa-table"></i>Detalles
             </div>
             <div class="card-body">
-              <div class="btn_agregar">
-                <a href="{% url 'vista_agregar_nombre_material' %}" class="btn btn-secondary" id="agregar">Agregar Nombre de material</a>
-              </div>
+              {% if user.is_staff %}
+                <div class="btn_agregar">
+                  <a href="{% url 'vista_agregar_nombre_material' %}" class="btn btn-secondary" id="agregar">Agregar Nombre de material</a>
+                </div>
+              {% endif %}
               <div class="table-responsive">
                 <table class="table table-bordered table-hover" id="dataTable" width="100%" cellspacing="0">
                   <thead>
                     <tr>
                       <th>nombre</th>
-                      <th></th>
+                      {% if user.is_staff %}
+                        <th>Funciones</th>
+                      {% endif %}
                     </tr>
                   </thead>
                   <tfoot>
                     <tr>
                       <th>nombre</th>
-                      <th></th>
+                      {% if user.is_staff %}
+                        <th>Funciones</th>
+                      {% endif %}
                     </tr>
                   </tfoot>
                   <tbody>
                  	{% for p in lista %}
                  		<tr>
                  			<td>{{p.nombre}}</td>
-                 			<td>
-                        <a href="{% url 'vista_editar_nombre_material' id_nm=p.id %}" class="btn btn-sm">
-                          <img src="{% static "imagenes/iconos/pencil-2x.png" %}">
-                        </a>
+                      {% if user.is_staff %}
+                   			<td>
+                          <a href="{% url 'vista_editar_nombre_material' id_nm=p.id %}" class="btn btn-sm">
+                            <img src="{% static "imagenes/iconos/pencil-2x.png" %}">
+                          </a>
 
-                        <a href="{% url 'vista_eliminar_nombre_material' id_nm=p.id %}" class="btn btn-sm">
-                          <img src="{% static "imagenes/iconos/trash-2x.png" %}">
-                        </a>
-                      </td>
+                          <a href="{% url 'vista_eliminar_nombre_material' id_nm=p.id %}" class="btn btn-sm">
+                            <img src="{% static "imagenes/iconos/trash-2x.png" %}">
+                          </a>
+                        </td>
+                      {% endif %}
                  		</tr>
                  		{% empty %}
           						<tr>
