--- a/templates/ver_ficha.html
+++ b/templates/ver_ficha.html
@@ -11,9 +11,11 @@ Lista de Fichas
               Lista de Fichas
             </div>
             <div class="card-body">
-              <div class="btn_agregar">
-                <a href="{% url 'agr_ficha'%}" class="btn btn-secondary" id="agregar">Agregar Ficha</a>
-              </div>
+              {% if user.is_staff %}
+                <div class="btn_agregar">
+                  <a href="{% url 'agr_ficha'%}" class="btn btn-secondary" id="agregar">Agregar Ficha</a>
+                </div>          
+              {% endif %}
               <div class="table-responsive">
                 <table class="table table-bordered table-hover" id="dataTable" width="100%" cellspacing="0">
                   <thead>
@@ -23,7 +25,9 @@ Lista de Fichas
                       <th>fecha_finalizacion</th>
                       <th>Estado</th>
                       <th>programa</th>
-                      <th></th>
+                      {% if use.is_staff %}
+                        <th>Acciones</th>
+                      {% endif %}
                     </tr>
                   </thead>
                   <tfoot>
@@ -33,7 +37,9 @@ Lista de Fichas
                       <th>fecha_finalizacion</th>
                       <th>Estado</th>
                       <th>programa</th>
-                      <th></th>
+                      {% if user.is_staff %}
+                        <th>Acciones</th>
+                      {% endif %}
                     </tr>
                   </tfoot>
                   <tbody>
@@ -44,15 +50,17 @@ Lista de Fichas
                  			<td>{{p.fecha_finalizacion}}</td>
                  			<td>{{p.estado}}</td>
                  			<td>{{p.programa}}</td>
-                 			<td>
-                        <a href="{% url 'edit_ficha' id_fic=p.id %}" class="btn btn-sm">
-                          <img src="{% static "imagenes/iconos/pencil-2x.png" %}">
-                        </a>
+                      {% if user.is_staff %}
+                 			  <td>
+                          <a href="{% url 'edit_ficha' id_fic=p.id %}" class="btn btn-sm">
+                            <img src="{% static "imagenes/iconos/pencil-2x.png" %}">
+                          </a>
 
-                        <a href="{% url 'elim_ficha' id_fic=p.id %}" class="btn btn-sm">
-                          <img src="{% static "imagenes/iconos/trash-2x.png" %}">
-                        </a>
-                      </td>
+                          <a href="{% url 'elim_ficha' id_fic=p.id %}" class="btn btn-sm">
+                            <img src="{% static "imagenes/iconos/trash-2x.png" %}">
+                          </a>
+                        </td>
+                      {% endif %}
                  		</tr>
                  		{% empty %}
           						<tr>
