--- a/templates/vista_editar_material_devolutivo.html
+++ b/templates/vista_editar_material_devolutivo.html
@@ -1,34 +1,38 @@
 {% extends "base.html" %}
 {% load bootstrap %}
+{% block titulo %}
+  Editar Material
+{% endblock titulo %}
 {% block contenido %}
 <div id="cajota">
   <div id="centrar">
-    <h4>Editar Material</h4>
-    <form action="" method="POST" name="f1" id="f1">
-        {% csrf_token %}
-        {{ bod.management_form }}
-        <div class="col-md-12">
-            {{formulario|bootstrap}}
-            {% for form in bod %}
-            <div class="formset">
-                {{ form.id }}
-                <div class="row">
-                  <div class="col-md-4">{{form.bodega|bootstrap}}</div>
-                  <div class="col-md-4">{{form.fecha_ingresa|bootstrap}}</div>
-                  <div class="col-md-4">{{form.fecha_salida|bootstrap}}</div>      
-                </div>
-            </div>
-            {% endfor %}
-            <button class="btn btn-guardar" type="submit">Editar Material</button>
-        </div>
-    </form>  <br>
-    <a class="btn btn-secondary btn-sm" href="{% url 'vista_lista_material' %}">Regresar a la lista</a>
+      <h4>Editar Material</h4>
+      <h5>
+        {{ msj_bod }}
+      </h5>
+      <form action="" method="POST" name="f1" id="f1" enctype="multipart/form-data">
+          {% csrf_token %}
+          <div class="col-md-12">
+              {{formulario|bootstrap}}
+              {{ bod.management_form }}
+              {% for form in bod %}
+              <div class="link-formset">
+                  {{ form.id }}
+                  <div class="row">
+                    <div class="col-md-4">{{form.bodega|bootstrap}}</div>
+                    <div class="col-md-4">{{form.fecha_ingresa|bootstrap}}</div> 
+                    <div class="col-md-4">{{form.fecha_salida|bootstrap}}</div>     
+                  </div>
+              </div>
+              {% endfor %}
+              <button class="btn btn-guardar" type="submit">Editar material</button>
+          </div>
+      </form>
   </div>
 </div>
   <script type="text/javascript">
   	$(document).ready(function(){
-      $('label[for="id_codigo_sena"]').hide();
-			$('#id_codigo_sena').hide();
+			$('#id_cantidad').attr('disabled','disabled');
 			$('#id_tipo_elemento').on('change',function(){
 			var selectValor = '#'+$(this).val();
 			if (selectValor=='#Devolutivo') {
@@ -40,6 +44,7 @@
 				$('#id_codigo_sena').hide();
 				$('label[for="id_codigo_sena"]').hide();
 				document.f1.id_cantidad.disabled=false;
+        
 			}
 		});
 	});
@@ -60,4 +65,5 @@
     $.datepicker.setDefaults($.datepicker.regional['es']);
     $('.datepicker').datepicker({dateFormat : 'yy-mm-dd'});
   </script>
+
 {% endblock contenido %}
