--- a/templates/vista_lista_marca.html
+++ b/templates/vista_lista_marca.html
@@ -10,37 +10,45 @@
               Lista de Marcas
             </div>
             <div class="card-body">
-              <div class="btn_agregar">
-	               <a href="{% url 'vista_agregar_marca' %}" class="btn btn-secondary" id="agregar">Agregar Marca</a>
-              </div>
+              {% if user.is_staff %}
+                <div class="btn_agregar">
+  	               <a href="{% url 'vista_agregar_marca' %}" class="btn btn-secondary" id="agregar">Agregar Marca</a>
+                </div>
+              {% endif %}
               <div class="table-responsive">
                 <table class="table table-bordered table-hover" id="dataTable" width="100%" cellspacing="0">
                   <thead>
                     <tr>
                       <th>nombre</th>
-                      <th></th>
+                      {% if user.is_staff %}
+                        <th>Funciones</th>
+                      {% endif %}
                     </tr>
                   </thead>
                   <tfoot>
                     <tr>
                       <th>nombre</th>
-                      <th></th>
+                      {% if user.is_staff %}
+                        <th>Funciones</th>
+                      {% endif %}
                     </tr>
                   </tfoot>
                   <tbody>
                  	{% for p in lista %}
                  		<tr>
                  			<td>{{p.nombre}}</td>
-                 			<td>
-                        <a href="{% url 'vista_editar_marca' id_marca=p.id %}" class="btn btn-sm">
-                          <img src="{% static "imagenes/iconos/pencil-2x.png" %}">
-                        </a>
+                      {% if user.is_staff %}
+                   			<td>
+                          <a href="{% url 'vista_editar_marca' id_marca=p.id %}" class="btn btn-sm">
+                            <img src="{% static "imagenes/iconos/pencil-2x.png" %}">
+                          </a>
 
-                        <a href="{% url 'vista_eliminar_marca' id_marca=p.id %}" class="btn btn-sm">
-                          <img src="{% static "imagenes/iconos/trash-2x.png" %}">
-                        </a>
-                      </td>
-                 		</tr>
+                          <a href="{% url 'vista_eliminar_marca' id_marca=p.id %}" class="btn btn-sm">
+                            <img src="{% static "imagenes/iconos/trash-2x.png" %}">
+                          </a>
+                        </td>
+                      {% endif %}
+                    </tr>
                  		{% empty %}
           						<tr>
           							<td colspan="4">
