--- a/templates/vista_lista_material.html
+++ b/templates/vista_lista_material.html
@@ -10,9 +10,11 @@
               Lista de Materiales
             </div>
             <div class="card-body">
-              <div class="btn_agregar">
-                  <a class="btn btn-secondary" href="{% url 'vista_agregar_material' %}" id="agregar">Agregar Material</a>       
-              </div>
+              {% if user.is_staff %}
+                <div class="btn_agregar">
+                    <a class="btn btn-secondary" href="{% url 'vista_agregar_material' %}" id="agregar">Agregar Material</a>       
+                </div>
+              {% endif %}
               <div class="table-responsive">
                 <table class="table table-bordered table-hover" id="dataTable" width="100%" cellspacing="0">
                   <thead>
@@ -22,7 +24,9 @@
                       <th>Numero de Serie</th>
                       <th>Tipo de Elemento</th>
                       <th>Cantidad</th>
-                      <th></th>
+                      {% if user.is_staff %}
+                        <th>Funciones</th>
+                      {% endif %}
                     </tr>
                   </thead>
                   <tfoot>
@@ -32,7 +36,9 @@
                       <th>Numero de Serie</th>
                       <th>Tipo de Elemento</th>
                       <th>Cantidad</th>
-                      <th></th>
+                      {% if user.is_staff %}
+                        <th>Funciones</th>
+                      {% endif %}
                     </tr>
                   </tfoot>
                   <tbody>
@@ -43,19 +49,21 @@
                           <td>{{p.numero_serie}}</td>
           								<td>{{p.tipo_elemento}}</td>
           								<td>{{p.cantidad}}</td>
-          								<td>
-                            <a class="btn btn-sm" href="{% url 'vista_ver_material' id_material=p.id%}">
-                              <img src="{% static "imagenes/iconos/eye-2x.png" %}">
-                            </a>
+                          {% if user.is_staff %}
+            								<td>
+                              <a class="btn btn-sm" href="{% url 'vista_ver_material' id_material=p.id%}">
+                                <img src="{% static "imagenes/iconos/eye-2x.png" %}">
+                              </a>
 
-                            <a class="btn btn-sm" href="{% url 'vista_editar_material' id_material=p.id%}">
-                              <img src="{% static "imagenes/iconos/pencil-2x.png" %}">
-                            </a>
+                              <a class="btn btn-sm" href="{% url 'vista_editar_material' id_material=p.id%}">
+                                <img src="{% static "imagenes/iconos/pencil-2x.png" %}">
+                              </a>
 
-                            <a class="btn btn-sm" href="{% url 'vista_eliminar_material' id_material=p.id%}">
-                              <img src="{% static "imagenes/iconos/trash-2x.png" %}">
-                            </a>        
-                          </td>
+                              <a class="btn btn-sm" href="{% url 'vista_eliminar_material' id_material=p.id%}">
+                                <img src="{% static "imagenes/iconos/trash-2x.png" %}">
+                              </a>        
+                            </td>
+                          {% endif %}
           							</tr>
           						{% empty %}
           						<tr>
