--- a/static/css/sb-admin.css
+++ b/static/css/sb-admin.css
@@ -15,7 +15,7 @@ body {
 }
 #cajota{
    margin:auto;
-   width: 800px;
+   width: 70%;
    padding: 30px;
 
     background: #eee;
@@ -30,7 +30,7 @@ body {
 
 #centrar{
   
-  width: 550px;
+  width: 80%;
   margin:auto;  
 
 }
@@ -247,6 +247,10 @@ body.fixed-nav.sidebar-toggled #content-wrapper {
   .sidebar .nav-item.dropdown .dropdown-toggle::after {
     display: block;
   }
+  .img{
+    margin-left: 50%;
+    
+}
   .sidebar.toggled {
     overflow: visible;
     width: 90px !important;
@@ -391,7 +395,7 @@ footer.sticky-footer {
   position: absolute;
   right: 0;
   bottom: 0;
-  width: calc(100% - 90px);
+  width:100% ;
   height: 80px;
   background-color: #6c757d;
 }
@@ -415,6 +419,7 @@ body.sidebar-toggled footer.sticky-footer {
   body.sidebar-toggled footer.sticky-footer {
     width: calc(100% - 90px);
   }
+}
   #formulario{
 float: left;
 
@@ -519,44 +524,233 @@ background-color: #238276;
   text-align: left;
   padding-bottom: 10px
 }
-#texto{
-  text-align: center;
-}
-.linea{
-  margin: auto;
-   width: 600px;
-   height: 400px;
-     
-}
+
 
 .h{
   margin: auto;  
   width: 608px;
 }
 
-.t{
-  
-display: inline-block;
-}
 
 
 .titulo{
-  width: 800px;
-  font-family: sans-serif;
+  background: #238276;
+  
  
+  height: 100%;
   margin: auto;
   text-align: center;
  
 }
+.titulo h1{
+  color: #fff;
+  text-align: center;
+  font-family: sans-serif;
+  font-size: 5vw;
+  height: 100%;
+  margin: auto 0px;
+  background: #238276;
+}
 
 
-#icon{
 
-  font-size: 13vw;
+.ini{
+  padding-top: 20px;
+  background: #fff;
+  width: 100%;
+}
+.ini ul{
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  text-align: center;
+
+}
+.ini ul li{
+  display: inline-block;
+  padding: 20px 15px;
+  
+
+}
+.ini ul li a span{
   color: #fc7323;
-    
+  font-size: 7vw;
+}
+
+.ini ul li p{
+  padding-top: 15px;
+  font-size: 2vw;
+}
+
+.ini ul li a span:hover{
+  color: rgba(252,115,32,.8);
 }
 
 
 
 
+
+
+#e1{
+  font-size: 21px;
+  letter-spacing: .2em;
+  color: rgba(255,255,255,0.6);
+}
+#e2{
+  color: #cccaca;
+  letter-spacing: .2em;
+}
+
+#admin{ 
+  float: left;
+  margin: 0px -25px;
+
+}
+#ay{
+  font-size: 1vw;
+  padding-right: 10px;
+color: #fc7323;
+
+
+
+}
+#y1{
+  display: inline-block;
+  list-style: none;
+}
+
+
+#y1:active{
+ background: red;
+}
+
+
+
+
+.menu{
+  display: none;
+}
+body{
+  max-height: 100%;
+}
+
+header{
+
+  max-height: 100%;
+}
+
+
+header nav{
+  width: 250px;
+  background: #238276;
+  z-index: 1000;
+  max-width: 250px;
+  margin-top: 62px;
+  padding-top: 5px;
+  height: calc(100% - 58px);
+  overflow-y: auto;
+  position: fixed;
+
+
+}
+
+
+header nav ul{
+  list-style: none;
+  margin: 0px;
+  padding: 0px;
+
+}
+header nav ul li{ 
+  position: relative;
+}
+header nav ul li #selector{
+ text-decoration: none;
+  display: block;
+  padding: 15px 20px;
+  color:#fff; 
+}
+header nav ul li:hover{
+  background:rgba(0,0,0,0.1);
+}
+header nav ul li:hover .childrenn{
+  display: none;
+
+}
+
+header nav ul li .childrenn{
+  display: none;
+  background: rgba(0,0,0,0.1);
+  position: absolute;
+  width: 98%;
+  z-index: 1000;
+  position: relative;
+  margin: 0px auto;
+
+}
+header nav ul li .childrenn li{
+  display: block;
+  overflow: hidden;
+  border-bottom: 1px solid rgba(255,255,255,.2);
+
+
+}
+header nav ul li .childrenn li a{
+  padding: 10px 20px;
+  display: block;
+  color: #fff;
+  text-decoration: none;
+}
+
+
+#peque{
+  min-width: 250px;
+  height:67%;
+}
+
+@media screen and (max-width: 768px){
+  header{
+    width: 0;
+  }
+  .menu{
+    display: block;
+    width: 10%;
+    position: fixed;
+    top: 0px;
+   
+  }
+  .menu #icmenu{
+    display: block;
+    padding: 20px;
+    margin: 0px auto;
+    overflow: hidden;    
+    text-decoration: none;
+
+  }
+  .menu span{
+    color: #fff;
+    font-size: 25px;
+  }
+  header nav{
+    width: 80%;
+    height: calc(100%-58px);
+    position: fixed;
+    overflow-y: scroll;
+    right: 100%;
+    
+  }
+}
+@media screen and (min-width: 769px){
+  header nav{
+    left: 0;
+    
+  }
+}
+
+#chevron{
+  float: right;
+  position: relative;
+  top: 3px;
+  margin-right: 0;
+  margin-left: 10px;
+}
