--- a/templates/registro.html
+++ b/templates/registro.html
@@ -3,13 +3,15 @@
 	Registro
 {% endblock titulo %}
 {% block contenido %}
+<div id="cajota">
+  <div id="centrar">
 	<h4>Registrar Encargado de Bodega</h4>
 	<h3>{{msj}}</h3>
 	<form action="" method="POST">
 		{% csrf_token %}
 		<div class="form-group">
-            <div class="form-row">
-               <div class="col-md-6">
+            <div>
+               <div >
 	               {{formulario.username.errors}}
 	               <div class="form-label-group">
 	                  {{formulario.username}}
@@ -20,8 +22,8 @@
        </div>
 
        	<div class="form-group">
-            <div class="form-row">
-               <div class="col-md-6">
+            <div>
+               <div >
 	               {{formulario.email.errors}}
 	               <div class="form-label-group">
 	                  {{formulario.email}}
@@ -32,8 +34,8 @@
        </div>
 
        <div class="form-group">
-            <div class="form-row">
-               <div class="col-md-6">
+            <div>
+               <div >
 	               {{formulario.password_1.errors}}
 	               <div class="form-label-group">
 	                  {{formulario.password_1}}
@@ -44,8 +46,8 @@
        </div>
 
        <div class="form-group">
-            <div class="form-row">
-               <div class="col-md-6">
+            <div >
+               <div >
 	               {{formulario.password_2.errors}}
 	               <div class="form-label-group">
 	                  {{formulario.password_2}}
@@ -56,4 +58,6 @@
        </div>
 		<input class="btn btn-success" type="submit" value="Registrar Encargado">
 	</form>
+</div>
+</div>
 {% endblock contenido %}
