--- a/templates/vista_materiales_disponibles.html
+++ b/templates/vista_materiales_disponibles.html
@@ -5,9 +5,9 @@
 {% block contenido %}
 	<h1 align="center">REPORTE DE MATERIALES DISPONIBLES   </h1> 
 
-	<h5>reporte de los materiales disponibles que hay en bodega con su respectivo
+	<h5 style="padding:20px;">reporte de los materiales disponibles que hay en bodega con su respectivo
 	 tipo de elemento, nombre, cantidad, marca, ficha, estado, cuentadante, codigo sena </h5>
 
-	 <a href="{% url 'vista_reporte_material'%}" class="btn btn-block" id="des">descargar reporte</a>
+	 <button type="submit" class="btn btn-success" style="margin-left:20px;"><a style="color:#fff; font-size:100%;" href="{% url 'vista_reporte_material'%}" class="btn btn-block" id="des">descargar reporte</a></button>
 
 {% endblock contenido %}
