--- a/templates/base.html
+++ b/templates/base.html
@@ -28,7 +28,7 @@
     <!-- Custom styles for this template-->
     <link rel="stylesheet" type="text/css" href="{% static "css/sb-admin.css" %}">
     <script src="{% static "js/jquery-3.2.1.js" %}"></script>
-    <script src="{% static "js/jquery-ui.js"%}></script>
+    <script src="{% static "js/jquery-ui.js" %}"></script>
     <script src="{% static "js/jquery.formset.js" %}"></script>
     <script src="{% static "css/prueba.js" %}"></script>
 
