--- a/templates/base.html
+++ b/templates/base.html
@@ -123,7 +123,7 @@
                  <a href="{% url 'detalle_ficha' %}"><span id="e2" class="fas fa-file-alt"></span>Ficha</a>
                </li>
                <li>
-                 <a href="{% url 'vista_lista_bodega' %}"><span id="e2" class="fas fa-box"></span>Bodega</a>
+                 <a href="{% url 'vista_lista_bodega' %}"><span id="e2" class="fas fa-box"></span>Ambiente</a>
                </li>
                <li>
                  <a href="{% url 'lista_cuentadante' %}"><span id="e2" class="fas fa-address-card"></span>Cuentadante</a>
