--- a/templates/vista_agregar_bodega.html
+++ b/templates/vista_agregar_bodega.html
@@ -5,7 +5,7 @@ Agregar Bodega
 {% block contenido %}
 <div id="cajota">
   <div id="centrar">
-  <h3>Agregar Bodega</h3>
+  <h3>Agregar Ambiente</h3>
   <br>
 	<form action="" method="POST">
 		{% csrf_token %}
