--- a/templates/lista_bodega.html
+++ b/templates/lista_bodega.html
@@ -10,7 +10,7 @@
 <div class="card mb-3">
             <div class="card-header">
               <i class="fas fa-table"></i>
-              Lista de Bodegas
+              Lista de Ambientes
             </div>
             <div class="card-body">
               {% if user.is_staff %}
