--- a/templates/lista_bodega.html
+++ b/templates/lista_bodega.html
@@ -15,7 +15,7 @@
             <div class="card-body">
               {% if user.is_staff %}
                 <div class="btn_agregar">
-                  <a href="{%url 'vista_agregar_bodega'%}" class="btn btn-secondary" id="agregar">Agregar Bodega</a>
+                  <a href="{%url 'vista_agregar_bodega'%}" class="btn btn-secondary" id="agregar">Agregar Ambiente</a>
                 </div>
               {% endif %}
               <div class="table-responsive">
