--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -40,7 +40,9 @@
         <header>
            
            <div class="navbar navbar-expand navbar-dark fixed-top">
-             <img id="Logo" src="{% static "imagenes/Faviconpreiser.png" %}" alt="Logo Preiser" width="130" height="50">
+           <a href="{% url 'vista_inicio'%}">
+             <img id="Logo" src="{% static "imagenes/Faviconpreiser.png" %}" alt="Logo Preiser" width="130" height="50"> 
+           </a>
             <div class="container">    
 
           <button class="btn btn-link btn-sm text-white order-1 order-sm-0" id="sidebarToggle" href="#">
