--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -88,7 +88,7 @@
          <li>
            <a id="selector" href="{%url 'vista_lista_material' %}">
              <span id="e1" class="fas fa-box"></span>
-              Materiales y Elemtos
+              Materiales y Elementos
              <span></span>
            </a>
          </li>
