--- a/templates/login.html
+++ b/templates/login.html
@@ -1,6 +1,6 @@
 {% load staticfiles %}
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
 	<title>Iniciar Sesion</title>
 	<meta charset="UTF-8">
@@ -37,7 +37,7 @@
 				<form action="" method="POST" >
 					{% csrf_token %}
 					<span class="login100-form-title p-b-49">
-						Login
+						Iniciar Sesion
 					</span>
 					<div class="wrap-input100 validate-input m-b-23" data-validate = "Username is reauired">
 						{{formulario.user}}
