--- a/templates/ver_reporte.html
+++ b/templates/ver_reporte.html
@@ -11,9 +11,9 @@
 		<h2>Consulta de Materiales Por Fechas</h2>
 		<br>
 		DESDE
-		<input name="textfield" class="datepicker">
+		<input name="textfield" class="datepicker" required="true">
 		HASTA
-		<input name="textfield1" class="datepicker">
+		<input name="textfield1" class="datepicker" required="true">
 		<button type="submit" class="btn btn-success">Buscar</button>
 		<br><br>
 		{% if info %}
