--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -62,7 +62,7 @@
                <div id="admin"><i id="c1" class="fas fa-user-circle fa-fw"><div id="user">{{user.username}}</div></i></div> 
               </a>
               <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
-               <a  class="dropdown-item" href="{% url 'vista_register' %}"><span id="ay" class="fas fa-user-alt"></span>Perfil</a> 
+               <a  class="dropdown-item" href="{% url 'vista_register' %}"><span id="ay" class="fas fa-user-alt"></span>Encargado</a> 
                  <a  class="dropdown-item" href="#"><span id="ay" class="fas fa-question-circle"></span>Ayuda</a> 
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal"><span id="ay" class="fas fa-sign-out-alt"></span>Cerrar Sesion</a>
