--- a/templates/ver_prestamo.html
+++ b/templates/ver_prestamo.html
@@ -53,6 +53,9 @@
                 
   
     <input type="submit" value="AGREGAR DEVOLUCION">
+  <br>
+  <br>
+  <button class="btn btn-success"href="{% url 'lista_prestamo' %}">Regresar</button>
   </form>
 </div>
 </div>
