--- a/templates/vista_materiales_disponibles.html
+++ b/templates/vista_materiales_disponibles.html
@@ -9,5 +9,11 @@
 	 tipo de elemento, nombre, cantidad, marca, ficha, estado, cuentadante, codigo sena </h5>
 
 	 <button type="submit" class="btn btn-success" style="margin-left:20px;"><a style="color:#fff; font-size:100%;" href="{% url 'vista_reporte_material'%}" class="btn btn-block" id="des">descargar reporte</a></button>
+		
 
+		<br>
+<br>
+	<h4 align="center">REPORTE DE MATERIALES NO  DISPONIBLES   </h4>
+	<a href="{%url 'vista_reportes'%}" class="btn btn-block" id="des">
+		descargar_reprotes</a>
 {% endblock contenido %}
