--- a/templates/lista_prestamo.html
+++ b/templates/lista_prestamo.html
@@ -53,9 +53,9 @@
                               <img src="{% static "imagenes/iconos/action-undo-2x.png" %}">
                             <a> 
                             
-                            <a  class="btn btn-sm" href=""data-toggle="modal"data-target="#logoutModal">
+                            <a  class="btn btn-sm" href=""data-toggle="modal"data-target="#logoutModall">
                              <img src="{% static "imagenes/iconos/trash-2x.png" %}">
-      <div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal fade" id="logoutModall" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
               <div class="modal-dialog" role="document">
                   <div class="modal-content">
                       <div class="modal-header">
